--- a/test/fixtures/clientes.yml
+++ b/test/fixtures/clientes.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  cod: MyString
+  cod: 1
   ci: MyString
   nombre: MyString
   direccion: MyString
@@ -12,7 +12,7 @@ one:
   observacion: MyString
 
 two:
-  cod: MyString
+  cod: 1
   ci: MyString
   nombre: MyString
   direccion: MyString
